@@ -15,6 +15,7 @@ app-portage/eix:tools - Create separate binary for script helper tools; useful i
 app-shells/auto-fu-zsh:compile - Byte-compile to speed up
 app-shells/termcolors-mv:create - Install DIR_COLORS-create perl script
 app-shells/termcolors-mv:perl - Install 256colors perl script
+app-shells/zsh:compile - Byte-compile to speed up
 app-shells/zsh:completion_AIX - Install zsh completions for AIX
 app-shells/zsh:completion_BSD - Install zsh completions for BSD
 app-shells/zsh:completion_Cygwin - Install zsh completions for Cygwin
